# CVKN

./: README.md  hello.py  pyproject.toml
AI by Hand/: 1-Image.md  1. Image-blank.xlsx
Projects/: 001-Cool_vs_Warm_prediction.py  002-Dull_vs_Bright_prediction.py  Assignment_1.py
Resources/001_Image_Processing_1/: 001-image_processing_types_exif.ipynb  RGB_visualize.py  digital_image.ipynb  import_image.ipynb  installation.txt
Resources/001_Intro to DL and IP - 1/: 001-image_processing_types_exif.ipynb  002-color_models.ipynb
Resources/002_Image_Processing_2/: 003-color_model_classification_thresholding_contours_shapes.ipynb  RGB_BGR_HSV_Grayscale.py
Resources/002_Intro_to_DL_and_IP_2/: 002-color_models.ipynb  003-color_model_classification_thresholding_contours_shapes.ipynb  RGB_BGR_HSV_Grayscale.py
Resources/003_Intro_to_NN_and_DV_1/: filter_visualization.py
Resources/003_Intro_to_NNand_DV_1/: filter_visualization.py  image_processing_3.ipynb
Resources/004_Image_Processing_4_and_NN/: Image_processing_IV.md  Neural_Networks.md
Resources/1. Intro to DL and IP - 1/: 001-image_processing_types_exif.ipynb  002-color_models.ipynb  RGB_visualize.py  installation.txt  requirements.txt
