[project]
name = "cvkn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "pyautogui>=0.9.54",
    "seaborn>=0.13.2",
]
